k8s/devops/elasticsearch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: D:\learn\java\k8s\kompose-windows-amd64.exe -f .\docker-compose.devops.yml convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: elasticsearch
  name: elasticsearch
  namespace: sc
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: elasticsearch
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: D:\learn\java\k8s\kompose-windows-amd64.exe -f .\docker-compose.devops.yml convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/sc-net: "true"
        io.kompose.service: elasticsearch
    spec:
      containers:
        - env:
            - name: ES_JAVA_OPTS
              value: -Xms8g -Xmx8g
            - name: bootstrap.memory_lock
              value: "true"
            - name: cluster.name
              value: elasticsearch
            - name: node.name
              value: elasticsearch_node_1
            - name: xpack.security.enabled
              value: "false"
          image: lo-harbor.yyjzt.com/sassflow/elasticsearch:7.10.1
          name: sc-elasticsearch
          ports:
            - containerPort: 9200
            - containerPort: 9300
          resources: {}
          volumeMounts:
            - mountPath: /usr/share/elasticsearch/data
              name: elasticsearch-claim0
            - mountPath: /usr/share/elasticsearch/logs
              name: elasticsearch-claim1
            - mountPath: /usr/share/elasticsearch/config/elasticsearch.yml
              name: elasticsearch-claim2
      restartPolicy: Always
      volumes:
        - name: elasticsearch-claim0
          persistentVolumeClaim:
            claimName: elasticsearch-claim0
        - name: elasticsearch-claim1
          persistentVolumeClaim:
            claimName: elasticsearch-claim1
        - name: elasticsearch-claim2
          persistentVolumeClaim:
            claimName: elasticsearch-claim2
status: {}
