k8s/devops/kibana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: D:\learn\java\k8s\kompose-windows-amd64.exe -f .\docker-compose.devops.yml convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: kibana
  name: kibana
  namespace: sc
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: kibana
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: D:\learn\java\k8s\kompose-windows-amd64.exe -f .\docker-compose.devops.yml convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/sc-net: "true"
        io.kompose.service: kibana
    spec:
      containers:
        - env:
            #- name: ELASTICSEARCH_URL
            #  value: http://elasticsearch-service:9200
            - name: ELASTICSEARCH_HOSTS
              value: http://elasticsearch-service:9200
            - name: TZ
              value: "Asia/Shanghai"
          image: lo-harbor.yyjzt.com/sassflow/kibana:7.10.1
          name: sc-kibana
          ports:
            - containerPort: 5601
          resources: {}
          volumeMounts:
            - mountPath: /var/logs/kibana
              name: kibana-claim1
            #- mountPath: /etc/kibana/kibana.yml
            #  name: kibana-claim1
      restartPolicy: Always
      volumes:
        - name: kibana-claim1
          persistentVolumeClaim:
            claimName: kibana-claim1
        #- name: kibana-claim1
        #  persistentVolumeClaim:
        #    claimName: kibana-claim1
status: {}
