k8s/devops/skywalking-oap-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: D:\learn\java\k8s\kompose-windows-amd64.exe -f .\docker-compose.devops.yml convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: skywalking-oap
  name: skywalking-oap
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: skywalking-oap
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: D:\learn\java\k8s\kompose-windows-amd64.exe -f .\docker-compose.devops.yml convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/sc-net: "true"
        io.kompose.service: skywalking-oap
    spec:
      containers:
        - image: wutang/skywalking-oap:6.1.0
          name: skywalking-oap
          ports:
            - containerPort: 11800
            - containerPort: 12800
          resources: {}
          volumeMounts:
            - mountPath: /apache-skywalking-apm-bin/config
              name: skywalking-oap-claim0
              readOnly: true
      restartPolicy: Always
      volumes:
        - name: skywalking-oap-claim0
          persistentVolumeClaim:
            claimName: skywalking-oap-claim0
            readOnly: true
status: {}
