k8s/devops/zipkin-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: D:\learn\java\k8s\kompose-windows-amd64.exe -f .\docker-compose.devops.yml convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: zipkin-server
  name: zipkin-server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: zipkin-server
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: D:\learn\java\k8s\kompose-windows-amd64.exe -f .\docker-compose.devops.yml convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/sc-net: "true"
        io.kompose.service: zipkin-server
    spec:
      containers:
        - env:
            - name: ES_HOSTS
              value: http://elasticsearch:9200
            - name: RABBIT_ADDRESSES
              value: rabbitmq:5672
            - name: RABBIT_MQ_PORT
              value: "5672"
            - name: RABBIT_PASSWORD
              value: guest
            - name: RABBIT_USER
              value: guest
            - name: STORAGE_TYPE
              value: elasticsearch
          image: openzipkin/zipkin
          name: sc-zipkin-server
          ports:
            - containerPort: 9411
          resources: {}
          volumeMounts:
            - mountPath: /var/logs
              name: zipkin-server-claim0
      restartPolicy: Always
      volumes:
        - name: zipkin-server-claim0
          persistentVolumeClaim:
            claimName: zipkin-server-claim0
status: {}
