k8s/devops/es-cerebro.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cerebro
  name: cerebro
  namespace: sc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cerebro
  template:
    metadata:
      labels:
        app: cerebro
      name: cerebro
    spec:
      containers:
        - image: lo-harbor.yyjzt.com/sassflow/lmenezes/cerebro:0.8.3
          imagePullPolicy: IfNotPresent
          name: cerebro
          resources:
            limits:
              cpu: 1
              memory: 1Gi
            requests:
              cpu: 1
              memory: 1Gi
          volumeMounts:
            - name: cerebro-conf
              mountPath: /etc/cerebro
      volumes:
        - name: cerebro-conf
          persistentVolumeClaim:
            claimName: pvc-cerebro

      imagePullSecrets:
        - name: default-secret

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cerebro
  name: cerebro
  namespace: sc
spec:
  ports:
    - port: 9000
      protocol: TCP
      targetPort: 9000
      nodePort: 8090
  selector:
    app: cerebro
  type: NodePort
