k8s/devops/kibana-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: D:\learn\java\k8s\kompose-windows-amd64.exe -f .\docker-compose.devops.yml convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: kibana
  name: kibana
  namespace: sc
spec:
  type: NodePort
  ports:
    - name: "5601"
      port: 5601
      targetPort: 5601
      nodePort: 5601
  selector:
    io.kompose.service: kibana
status:
  loadBalancer: {}
