k8s/devops/skywalking-oap-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: D:\learn\java\k8s\kompose-windows-amd64.exe -f .\docker-compose.devops.yml convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: skywalking-oap
  name: skywalking-oap
spec:
  ports:
    - name: "11800"
      port: 11800
      targetPort: 11800
    - name: "12800"
      port: 12800
      targetPort: 12800
  selector:
    io.kompose.service: skywalking-oap
status:
  loadBalancer: {}
