k8s/devops/zipkin-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: D:\learn\java\k8s\kompose-windows-amd64.exe -f .\docker-compose.devops.yml convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: zipkin-server
  name: zipkin-server
  namespace: sc
spec:
  type: NodePort
  ports:
    - name: "9411"
      port: 9411
      targetPort: 9411
      nodePort: 9411
  selector:
    io.kompose.service: zipkin-server
status:
  loadBalancer: {}
